@@ -1,0 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<tileset version="1.10" tiledversion="1.10.2" name="grass" tilewidth="64" tileheight="48" tilecount="1" columns="1">
+ <image source="grass_1.png" width="64" height="48"/>
+</tileset>
